# bevy_msdf

./: Cargo.toml  LICENSE-APACHE  README.md
assets/: LICENSE.txt
examples/: minimal.rs  scene.rs  viewer.rs
src/: atlas.rs  lib.rs  msdf.wgsl  render.rs
