[package]
name = "bevy_msdf"
version = "0.1.0"
edition = "2021"
license = "MIT-0 OR (Apache-2.0 WITH LLVM-exception)"

[dependencies]
bytemuck = "*"
owned_ttf_parser = "0.19"
rect_packer = "0.2.1"
thiserror = "1"
wgpu = { version = "0.20", default-features = false }

[dependencies.bevy]
version = "0.14"
default-features = false
features = ["bevy_core_pipeline", "bevy_pbr", "bevy_asset", "bevy_render", "multi_threaded"]

[dependencies.msdfgen]
git = "https://github.com/katyo/msdfgen-rs"
rev = "5e62bcf"
default-features = false
features = ["ttf-parser", "png"]

[dev-dependencies]
bevy_egui = "0.28"

[dev-dependencies.bevy]
version = "0.14"
default-features = false
features = ["bevy_core_pipeline", "bevy_render", "bevy_pbr", "bevy_winit", "multi_threaded", "x11", "tonemapping_luts", "dynamic_linking"]
